Bug 506624 - ledger's columns do not auto-resize on double click
Summary: ledger's columns do not auto-resize on double click
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-05 09:27 UTC by gbcreation73
Modified: 2025-07-30 09:58 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description gbcreation73 2025-07-05 09:27:20 UTC
SUMMARY

In the ledger view, when I double-click on the right border of some columns (No., Date or Payee for exemple) to auto-resize them, the size of the column becomes very small.

STEPS TO REPRODUCE
1. Select a ledger
2. Double-click on the the right border of the Date column for example

OBSERVED RESULT

The size of the column becomes very small.

EXPECTED RESULT

The size of the column should be adjusted to fit the longest item.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Arch Linux
KDE Plasma Version: 6.4.0
Comment 1 Jack 2025-07-07 23:21:14 UTC
I  confirm this on Gentoo Linux.  It looks like it resizes to the smallest allowable width.
Comment 2 Thomas Baumgart 2025-07-30 08:13:03 UTC
Git commit e9866a3451124c329cf3aebae7919493823dfb4f by Thomas Baumgart.
Committed on 30/07/2025 at 08:12.
Pushed by tbaumgart into branch 'master'.

Fix resize to column content in ledgerview
FIXED-IN: 5.2.1

M  +6    -4    kmymoney/views/journaldelegate.cpp

https://invent.kde.org/office/kmymoney/-/commit/e9866a3451124c329cf3aebae7919493823dfb4f
Comment 3 Thomas Baumgart 2025-07-30 09:58:11 UTC
Git commit 5248d45a243d7c7dcb713b34e0f682a0114ebbb5 by Thomas Baumgart.
Committed on 30/07/2025 at 09:57.
Pushed by tbaumgart into branch '5.2'.

Fix resize to column content in ledgerview
FIXED-IN: 5.2.1
(cherry picked from commit e9866a3451124c329cf3aebae7919493823dfb4f)

M  +6    -4    kmymoney/views/journaldelegate.cpp

https://invent.kde.org/office/kmymoney/-/commit/5248d45a243d7c7dcb713b34e0f682a0114ebbb5