Fix resize to column content in ledgerview

BUG: 506624
FIXED-IN: 5.2.1